# lab08

./: CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  Dockerfile  LICENSE  README.md  REPORT.md  appveyor.yml  hello_world.cpp
.github/workflows/: cmake.yml  release.yml
banking/: CMakeLists.txt
banking/include/banking/: Account.hpp  Transaction.hpp
banking/src/: Account.cpp  Transaction.cpp
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
tests/banking/: test_account.cpp  test_transaction.cpp
